# hacknation-2025

./: .gitignore  DOCKER_DEPLOYMENT.md  DOKUMENTACJA.md  PLAN_INTEGRACJI_FRONTEND.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/database/: __init__.py  store.py
backend/app/database/users/: __init__.py
backend/app/models/: schemas.py
backend/app/routes/: applications.py  attachments.py  chat.py  elevenlabs.py  elevenlabs_webhook_params.json  elevenlabs_webhook_params.md  health.py  rozmowa_script.py  zus_accidents.py
backend/app/services/: card_generator.py  form_analysis.py  form_state.py  zus_accident_analyse.py  zus_card_generator.py
backend/app/utils/: validation.py
backend/tests/converter/: convert_handwrite.py
backend/tests/data/: opinia 9.pdf:Zone.Identifier  trocr_base_handwritten.py
backend/tests/output/: karta wypadku 9.json  karta wypadku 9.txt  opinia 9.json  opinia 9.txt  wyjaśnienia poszkodowanego 9.json  wyjaśnienia poszkodowanego 9.txt  zawiadomienie o wypadku 9.json  zawiadomienie o wypadku 9.txt
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css  main.jsx
frontend/src/components/: FeatureCard.jsx  Hero.jsx
frontend/src/containers/: HomeContainer.jsx
frontend/src/contexts/: OfficerViewContext.tsx
frontend/src/hooks/: index.js  useBreakpoint.js  useDisclosure.js  useMediaQuery.js  usePagination.js  (+1 more)
nginx/: nginx.conf
(+86 files in other folders)
